login functionality added. New html page for register

--- a/html/settings.html
+++ b/html/settings.html
@@ -3,8 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
+    <!-- css link -->
+    <link rel="stylesheet" href="../css/allergyManagement.css">
+    <!-- jQuery and bootstrap links -->
+    <script src="../js/lib/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     [User information, change password, email etc]
+    <script src="../js/settings.js"></script>
 </body>
 </html>
