--- a/html/allergyManagement.html
+++ b/html/allergyManagement.html
@@ -3,8 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allergy Management</title>
+    <!-- css link -->
+    <link rel="stylesheet" href="../css/allergyManagement.css">
+    <!-- jQuery and bootstrap links -->
+    <script src="../js/lib/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     [Formulaire to specify the allergies]
+    <!-- js script -->
+    <script src="../js/allergyManagement.js"></script>
 </body>
 </html>
