--- a/html/login.html
+++ b/html/login.html
@@ -4,9 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="#">
     <title>Allergy Awareness App Login</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <!-- css link -->
+    <link rel="stylesheet" href="../css/login.css">
+    <!-- jQuery and bootstrap links -->
     <script src="../js/lib/jquery-3.7.1.min.js"></script>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -15,28 +16,28 @@
   <div class="container">
       <!-- Header Section -->
       <div class="app-header">
-          <h1>Allergies Awareness App</h1>
+          <h1>Allergy Awareness App</h1>
           <p>Improving the way consumers access vital information on allergies during shopping</p>
 
       <!-- Login Form Section -->
       <div class="app-section">
-          <h2></h2>
           <form class="login-form">
               <div class="form-group">
                   <label for="username">Username</label>
-                  <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                  <input type="text" class="form-control" id="username" placeholder="Enter your username" value="guest"/>
               </div>
               <div class="form-group">
                   <label for="password">Password</label>
-                  <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                  <input type="password" class="form-control" id="password" placeholder="Enter your password" value="abc123."/>
               </div>
-              <button type="button" class="btn btn-primary">Login</button>
-              <button type="button" class="btn btn-secondary">Register</button>
-              <button type="button" class="btn btn-link">Help</button>
+              <button type="button" id="btnLogin" class="btn btn-primary">Login</button>
+              <button type="button" id="btnRegister" class="btn btn-primary">Register</button>
           </form>
+          <div id="errorMsg"></div>
+          <button type="button" class="btn btn-link">Forgot your password</button>
       </div>
 
     <!-- js script -->
-    <script src="../js/script.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
