Navigation structure on buttons added.

--- a/html/index.html
+++ b/html/index.html
@@ -25,11 +25,10 @@
 
       <!-- Icon Buttons Section -->
       <div class="icon-buttons">
-          <button type="button" class="btn btn-primary"><i class="fas fa-plus"></i> Allergy Type</button>
-          <button type="button" class="btn btn-primary"><i class="fas fa-edit"></i> Personal Setting</button>
-          <button type="button" class="btn btn-primary"><i class="fas fa-info-circle"></i>User Info</button>
+          <button type="button" id="allergyManagement" class="btn btn-primary"><i class="fas fa-plus"></i>Allergy Management</button>
+          <button type="button" id="realTimeDetection" class="btn btn-primary"><i class="fas fa-edit"></i>Real Time Detection</button>
            <!-- Scanner button with placeholder for functionality -->
-           <button type="button" class="btn btn-primary" onclick="scanProduct()"><i class="fas fa-barcode"></i> Scanner</button>
+           <button type="button" id="settings" class="btn btn-primary" onclick="scanProduct()"><i class="fas fa-barcode"></i>Settings</button>
       </div>
       <!-- Alert Button Section -->
       <div class="alert-button">
