--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
     <div class="app-header">
         <h1>Allergies Awareness App</h1>
         <p>Improving the way consumers access vital information on allergies during shopping</p>
-
+        
         <div class="search-bar">
             <input type="text" class="form-control search-input" placeholder="Search for allergies, products...">
         </div>
@@ -28,7 +28,7 @@
           <button type="button" id="allergyManagement" class="btn btn-primary"><i class="fas fa-plus"></i>Allergy Management</button>
           <button type="button" id="realTimeDetection" class="btn btn-primary"><i class="fas fa-edit"></i>Real Time Detection</button>
            <!-- Scanner button with placeholder for functionality -->
-           <button type="button" id="settings" class="btn btn-primary" onclick="scanProduct()"><i class="fas fa-barcode"></i>Settings</button>
+           <button type="button" id="settings" class="btn btn-primary"><i class="fas fa-barcode"></i>Settings</button>
       </div>
       <!-- Alert Button Section -->
       <div class="alert-button">
