--- a/html/realTimeDetection.html
+++ b/html/realTimeDetection.html
@@ -11,7 +11,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-    [Scanner]
+    <div class="app-header">
+        <h1>Allergies Awareness App</h1>
+        <p>Improving the way consumers access vital information on allergies during shopping</p><br/>
+        <h2>Real Time Detection</h2><br/><br/>
+
+        <div id="scannerImage">
+            <img src="img/scanner.jpg"/>
+        </div><br/><br/>
+        <div class="search-bar">
+            <label for=""> Barcode </label>
+            <input type="text" class="form-control search-input" placeholder="">
+        </div>
+    </div>
     <!-- js script -->
     <script src="../js/allergyManagement.js"></script>
 </body>
