Node server functionality added

--- a/html/realTimeDetection.html
+++ b/html/realTimeDetection.html
@@ -21,12 +21,14 @@
                 <img src="img/scanner.jpg"/>
             </div><br/><br/>
             <div class="search-bar">
-                <label for=""> Barcode </label>
-                <input type="text" class="form-control search-input" placeholder="">
+                <label for="barcode"> Barcode </label>
+                <input type="text" name="barcode" class="form-control search-input" value="20201234">
+                <br/>
+                <button id="btnSearch" class="btn btn-primary"> Search </button>
             </div>
         </div>
     </div>
     <!-- js script -->
-    <script src="../js/allergyManagement.js"></script>
+    <script src="../js/realTimeDetection.js"></script>
 </body>
 </html>
